<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">TimeToGo</string>
    <string name="title_activity_main">TimeToGo</string>
    <string name="origin_button_message">Set origin</string>
    <string name="destination_button_message">Set destination</string>
    <string name="walking_button_message">Walking</string>
    <string name="transit_button_message">Transit</string>
    <string name="get_device_position_first">Get device position first</string>
    <string name="my_location">My location</string>
    <string name="my_destination">My destination</string>
    <string name="permission_necessary">Location permission necessary</string>
    <string name="location_permission_is_necessary">"The location permission is necessary for make to you a faster and accurated experience with app, please ALLOW permission in next screen :)"</string>
    <string name="loading_route_wait">Loading route. Please wait&#8230;</string>
    <string name="loading_wait">Loading please wait&#8230;</string>
    <string name="internet_necessary">Internet is necessary</string>
    <string name="message_internet_is_necessary">Internet is necessary, click retry to restart</string>
    <string name="retry">Retry</string>
    <string name="no_categories_loaded">No categories loaded&#8230;</string>
    <string name="quit">Quit</string>
    <string name="please_click_back_to_exit">Please click BACK again to exit</string>
    <string name="error_occured">Error occurred: </string>
    <string name="origin_or_destination_not_set">Origin or destination not set</string>
    <string name="route_not_found">Route not found&#8230;</string>
    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="categories">Categories: </string>
    <string name="arrival_time">Arrival time:  </string>
    <string name="departure_time">Departure time: </string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="stops">\u00A0Stops: </string>
    <string name="stop_name">Stop name: </string>
    <string name="headsign">\u00A0 -&gt; </string>
    <string name="line">Line: </string>
    <string name="id_palina">Id palina: </string>
    <string name="no_personal_poi_found">No personal POI found!</string>
    <string name="no_Google_POI_found">There is no Google POI around you!</string>
    <string name="no_bus_arriving">No bus arriving</string>
    <string name="RTI">RTI: </string>
    <string name="services_rti">services offered by \u00A0</string>
    <string name="departure_scheduled">\u00A0Departure</string>
    <string name="now_is_open">Now is open</string>
    <string name="now_is_close">Now is close</string>
    <string name="open_hours_not_available">Open hours not available</string>
    <string name="address">Address: </string>
    <string name="transit">Transit</string>
    <string name="walking">Walking</string>
    <string name="details_button">Details</string>
    <string name="details_button_message_more">MORE</string>
    <string name="details_button_message_less">LESS</string>
    <string name="category">categories</string>
    <string name="trip_details">\u00A0Trip details:</string>
    <string name="chose_origin">Please chose your origin to set!</string>
    <string name="delay">\' delay</string>
    <string name="no_more_routes">No more routes...</string>


    <string-array name="categories_name">
        <item>none</item>
        <item>none</item>
        <item>none</item>
        <item>none</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="banner_ad_unit_id">ca-app-pub-4009677260795454/7691723127</string>


</resources>
