<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/departure_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/SecondaryText"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:textColor="@color/SecondaryText"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/num_stops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stops"
        android:textColor="@color/SecondaryText"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/departure_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_name"
        android:textColor="@color/SecondaryText"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/headsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headsign"
        android:textColor="@color/SecondaryText"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:textAlignment="center"/>

</LinearLayout>

