<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        tools:context="it.curdrome.timetogo.activity.MainActivity"
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="75"
            tools:layout="@layout/place_autocomplete_fragment">

            <LinearLayout
                android:id="@+id/lnr_google_searchbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/lightPrimaryColor">

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <it.curdrome.timetogo.fab.FloatingActionMenu
                android:id="@+id/hidden_floating_action_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:visibility="invisible"
                app:menu_labels_position="right"
                app:menu_labels_ellipsize="end"
                app:menu_labels_singleLine="true">

                <it.curdrome.timetogo.fab.FloatingActionButton
                    android:id="@+id/origin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:src="@android:drawable/ic_menu_mylocation"
                    android:visibility="invisible"
                    app:fab_label="@string/origin_button_message"
                    app:fab_size="normal" />
            </it.curdrome.timetogo.fab.FloatingActionMenu>


            <it.curdrome.timetogo.fab.FloatingActionMenu
                android:id="@+id/floating_action_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="invisible"
                app:menu_labels_ellipsize="end"
                app:menu_labels_singleLine="true">

                <it.curdrome.timetogo.fab.FloatingActionButton
                    android:id="@+id/walking_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/walk"
                    android:visibility="gone"
                    app:fab_label="@string/walking_button_message"
                    app:fab_size="mini" />

                <it.curdrome.timetogo.fab.FloatingActionButton
                    android:id="@+id/transit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bus"
                    android:visibility="gone"
                    app:fab_label="@string/transit_button_message"
                    app:fab_size="mini" />

            </it.curdrome.timetogo.fab.FloatingActionMenu>

        </fragment>

        <FrameLayout
            android:id="@+id/frame_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="25"
            android:background="@color/lightPrimaryColor" />
    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/White"
        android:choiceMode="singleChoice"
        android:divider="@color/DividerColor"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>





